# check-excel

./: .gitignore  README.md  check_excel.py  mise.toml  pyproject.toml
.github/workflows/: schedule.yml
