[tool.poetry]
name = "check-excel"
version = "0.1.0"
description = ""
authors = ["rshikanai <reo.shikanai.s1@dc.tohoku.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.4"
pandas = "^2.2.3"
requests = "^2.32.3"
oauth2client = "^4.1.3"
pydrive2 = "^1.21.3"
dotenv = "^0.9.9"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
