[project]
name = "check-excel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "oauth2client>=4.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydrive2>=1.21.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]
